# rtype

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  vcpkg.json
client/: CMakeLists.txt
client/assets/animations/enemies/: boss.json  glider.json  zoid.json
client/assets/animations/missiles/: base.json
client/assets/animations/ships/: ship-1.json
client/assets/animations/ui/: health-bar.json
client/assets/maps/: map-1.json  map-2.json  test.json
client/assets/shaders/: achromatopsie.fs  deuteranopie.fs  dithering.fs  protanopie.fs  tritanopie.fs
client/include/core/: Core.hpp
client/include/display/: Scene.hpp  SceneManager.hpp
client/include/display/scenes/: Empty.hpp  Game.hpp  Menu.hpp
client/include/editor/: Editor.hpp
client/include/editor/utils/: FileBrowser.hpp  Utils.hpp
client/include/factories/: EntityFactory.hpp
client/include/scenes_network/: GameNetwork.hpp  ISceneNetwork.hpp  MenuNetwork.hpp
client/include/utils/: ConnectionConfig.hpp  Data.hpp  Error.hpp  Waitable.hpp
client/src/: main.cpp
client/src/core/: Core.cpp
client/src/display/: SceneManager.cpp
client/src/display/scenes/: Empty.cpp  Game.cpp  Menu.cpp
client/src/editor/: Editor.cpp
client/src/factories/: EntityFactory.cpp
client/src/scenes_network/: GameNetwork.cpp  ISceneNetwork.cpp  MenuNetwork.cpp
client/src/utils/: Waitable.cpp
common/: CMakeLists.txt
common/debug/include/: Logging.hpp  Profiler.hpp  Tickable.hpp
common/debug/src/: Logging.cpp  Profiler.cpp  Tickable.cpp
common/ecs/include/: ECSException.hpp  Entity.hpp  EventManager.hpp  Registry.hpp  SparseSet.hpp  components.hpp  systems.hpp
common/ecs/include/components/: AnimationComponent.hpp  BackgroundComponent.hpp  CameraComponent.hpp  ControlMoveComponent.hpp  ControlShootComponent.hpp  EnemyComponent.hpp  HealthComponent.hpp  HitboxComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  ScoreComponent.hpp  ShootComponent.hpp  SpriteComponent.hpp  UIComponent.hpp  VelocityComponent.hpp
common/ecs/src/systems/: UISystem.cpp  UIrenderSystem.cpp  animationSystem.cpp  backgroundSystem.cpp  cameraSystem.cpp  cleanupSystem.cpp  collisionSystem.cpp  controlAnimationStateSystem.cpp  controlMoveSystem.cpp  controlShootSystem.cpp  hitboxSystem.cpp  playerSystem.cpp  positionSystem.cpp  renderSystem.cpp  scoreSystem.cpp  shootDamageSystem.cpp  shootLifetimeSystem.cpp
common/map/include/map/: MapHandler.hpp
common/map/src/: MapHandler.cpp
dev_docs/: CMakeLists.txt  book.toml
dev_docs/src/: SUMMARY.md  deploying.md  ecs.md  map.md  network_game_protocol.md  network_library.md  network_query_protocol.md  server_architecture.md  servers_args.md
game_server/: CMakeLists.txt
game_server/include/GameServer/: GameServer.hpp  MasterClient.hpp
game_server/src/: main.cpp
game_server/src/GameServer/: GameServer.cpp  MasterClient.cpp
game_server/tests/: CMakeLists.txt  DummyClient.cpp  DummyClient.hpp  test_dummy_client.cpp
kube/: deploy_on_kube.sh  r-type_master_server.deployment.yaml  r-type_server.configmap.yaml  r-type_server.deployment.yaml
master_server/: CMakeLists.txt
master_server/include/MasterServer/: MasterServer.hpp
master_server/src/: main.cpp
master_server/src/MasterServer/: MasterServer.cpp
network/: CMakeLists.txt  generate-packets.scm
network/include/network/: AClient.hpp  APacket.hpp  AServer.hpp  NetworkDouble.hpp  NetworkObject.hpp  NetworkStream.hpp  PacketHandler.hpp  PacketId.hpp  Types.hpp  ieee754.h
network/include/network/packets/: ConnectionReplyPacket.hpp  ConnectionRequestPacket.hpp  DestroyEntityPacket.hpp  EndGamePacket.hpp  EntityMovementPacket.hpp  FullSynchronisationPacket.hpp  MovePlayerPacket.hpp  MovementActionPacket.hpp  NewEnemyPacket.hpp  NewEntityPacket.hpp  NewPlayerPacket.hpp  NewShootPacket.hpp  PingPacket.hpp  PlayerNamePacket.hpp  QueryRequestPacket.hpp  QueryResponsePacket.hpp  ServerListRequestPacket.hpp  ServerListResponsePacket.hpp  SetHealthPacket.hpp  SetScorePacket.hpp  ShootActionPacket.hpp  ShootPacket.hpp  SpecialAbilityActionPacket.hpp  StartGamePacket.hpp  UseSpecialAbilityPacket.hpp
network/include/network/transport/: ENetException.hpp  ENetServer.hpp  ENetTransportPeer.hpp  ITransportLayer.hpp  ITransportPeer.hpp  TransportEvent.hpp  TransportLayerFactory.hpp
network/src/: AClient.cpp  APacket.cpp  AServer.cpp  NetworkDouble.cpp  NetworkObject.cpp  NetworkStream.cpp  PacketHandler.cpp  Types.cpp
network/src/packets/: ConnectionReplyPacket.cpp  ConnectionRequestPacket.cpp  DestroyEntityPacket.cpp  EndGamePacket.cpp  EntityMovementPacket.cpp  FullSynchronisationPacket.cpp  MovementActionPacket.cpp  NewEnemyPacket.cpp  NewPlayerPacket.cpp  NewShootPacket.cpp  PingPacket.cpp  PlayerNamePacket.cpp  QueryRequestPacket.cpp  QueryResponsePacket.cpp  ServerListRequestPacket.cpp  ServerListResponsePacket.cpp  SetHealthPacket.cpp  SetScorePacket.cpp  ShootActionPacket.cpp  SpecialAbilityActionPacket.cpp  StartGamePacket.cpp
network/src/transport/: ENetException.cpp  ENetServer.cpp  ENetTransportPeer.cpp  TransportEvent.cpp  TransportLayerFactory.cpp
network/tests/: CMakeLists.txt  test_network_double.cpp  test_packets_stream.cpp  test_stream.cpp
